[package]
name = "rust-bindings"
version = "0.1.0"
edition = "2021"

[package.metadata]
exclude = ["test-data/*"]

[lib]
name="rust_bindings"
crate-type = ["dylib"]

[dependencies]
anyhow="1.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0" }
concordium-contracts-common = { version = "8.1.1", features = ["derive-serde"], path = "../concordium-base/smart-contracts/contracts-common/concordium-contracts-common" }
