[package]
name = "rust-bindings"
version = "0.1.0"
edition = "2021"

[package.metadata]
exclude = ["test-data/*"]

[lib]
name="rust_bindings"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
anyhow="1.0"
serde_json = "1.0"
serde = { version = "1.0" }
concordium-contracts-common = { version = "9.0.0", features = ["derive-serde"], path = "../concordium-base/smart-contracts/contracts-common/concordium-contracts-common" }

[dev-dependencies]
hex = "0.4"

[profile.release]
rpath = true
